--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,22 @@
     </properties>
 
     <dependencies>
+
+        <!--Dependency to generate a QR code image-->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+
+        <!--Dependancy to read QR image through the command line-->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
