--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #SQL Database
 
-spring.jpa.hibernate.ddl-auto = create
-spring.datasource.url=jdbc:mysql://localhost:3306/flightreservations
-spring.datasource.username=root
-spring.datasource.password=password
-useSSL=false
-spring.jpa.show-sql=false
+#spring.jpa.hibernate.ddl-auto = create
+#spring.datasource.url=jdbc:mysql://localhost:3306/flightreservations
+#spring.datasource.username=root
+#spring.datasource.password=password
+#useSSL=false
+#spring.jpa.show-sql=false
 
 #H2 Database
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-#spring.jpa.hibernate.ddl-auto=create
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.jpa.hibernate.ddl-auto=create
