--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #SQL Database
 
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 spring.datasource.url=jdbc:mysql://localhost:3306/flightreservations
 spring.datasource.username=root
 spring.datasource.password=password
